fixed overflow and styled for you section

--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,6 @@
     margin: 2rem 0;
 }
 
-main{
-    overflow: auto;
-}
-
 nav{
     background-color: black;
     width: 250px;
@@ -48,6 +44,7 @@ div.upper-logo img{
     background-color: #141922;
     width: 90vw;
     height: calc(100vh - 10vh);
+    overflow: auto;
 }
 
 .contents .upper-button{
@@ -71,12 +68,8 @@ li{
     color: #a3a3a3;
 }
 
-.rec-played{
+.rec-played, .for-you{
     margin: 1rem;
-}
-
-.albums{
-    justify-content: space-between;
 }
 
 .album{
@@ -89,11 +82,11 @@ li{
     width: 100%;
 }
 
-.album h2{
+.contents h2{
     font-size: 1.2rem;
 }
 
-.album h3{
+.contents h3{
     font-size: 0.8rem;
     color: #a3a3a3;
 }
